# Minigotchi

./: .env.example  .gitignore  README.md  docker-compose.yml  firestore.rules  index.html  manifest.config.ts  minigotchiclaudepromptsuivantsd4kv3.bundle  minigotchieconomyfix.bundle  minigotchifirebase.bundle  minigotchikenney.bundle  minigotchisetuppartage.bundle  minigotchisons.bundle  minigotchiuifun.bundle  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: apply-bundle.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  db.py  main.py  models.py  schemas.py
backend/minigotchi_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py
public/assets/: ATTRIBUTIONS.md
scripts/: package.mjs
src/auth/: index.ts  pkce.ts
src/background/: index.ts
src/firebase/: config.ts
src/game/: achievements.ts  config.ts  economy.ts  engine.ts  evolution.ts  index.ts  personality.ts  rng.ts  save.ts  stats.ts  types.ts
src/popup/: App.tsx  petAnimals.ts  popup.css  store.ts  useUiSound.ts
src/popup/components/: AccessoryOverlay.tsx  ActionBar.tsx  Hud.tsx  Pet.tsx  Pet3D.tsx  StatsBar.tsx
src/popup/screens/: Dex.tsx  Game.tsx  Login.tsx  MiniGames.tsx  Nursery.tsx  Settings.tsx  Shop.tsx
src/shared/: season.ts  sound.ts
src/storage/: index.ts
src/sync/: api.ts  firestore.ts  index.ts
tests/: engine.test.ts
